워크북 수정

--- a/workbook/3. AI 투자 어드바이저/3-3. Lab 3: 리스크 관리사 (Planning)/3-3-2. 모듈 3-2: Bedrock Agent 생성.md
+++ b/workbook/3. AI 투자 어드바이저/3-3. Lab 3: 리스크 관리사 (Planning)/3-3-2. 모듈 3-2: Bedrock Agent 생성.md
@@ -128,6 +128,7 @@ Bedrock Agent를 생성하고, 리스크 관리에 필요한 Action Group을 설
 
 - 두 액션 그룹이 추가되었는지 확인
 - **Save and exit** 클릭
+![Picture](./images/Picture30.png)
 
 ---
 
