--- a/workbook/3. AI 투자 어드바이저/3-3. Lab 4: 투자 어드바이저 (Multi Agent)/3-4-1. 모듈 4-1: Prompt 생성.md
+++ b/workbook/3. AI 투자 어드바이저/3-3. Lab 4: 투자 어드바이저 (Multi Agent)/3-4-1. 모듈 4-1: Prompt 생성.md
@@ -1,5 +1,7 @@
 # 모듈 4-1. Prompt 생성
 
+![아키텍처처](./images/Architecture.png)
+
 ## Architecture
 
 Amazon Bedrock Prompt Management를 이용하여 **리포트 생성가**를 위한 프롬프트를 생성합니다.
